# jetswitch

./: .editorconfig  .gitignore  README.md  docker-compose.yml  flake.nix
backend/: CONTRIBUTING.md  Dockerfile  go.mod  go.sum  main.go  railway.toml
backend/config/: config.go
backend/database/: db.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/handlers/: auth.go  auth_test.go  music.go
backend/middlewares/: auth.go  auth_test.go
backend/models/: error.go  music.go  user.go
backend/services/: auth.go  auth_test.go  music.go  oauth.go
backend/testutils/: test_db.go
db/: init.sql
frontend/: .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  railway.toml  vite.config.ts
frontend/public/: env.js
frontend/src/: App.tsx  global.d.ts  index.css
frontend/tests/: landing.spec.ts  login.spec.ts  logout.spec.ts  register.spec.ts  register_logout_login_type.spec.ts  uploadsong.spec.ts  (+1 more)
ml_service/: CONTRIBUTING.md  Dockerfile  main.py  pyproject.toml  pytest.ini  railway.toml
ml_service/repositories/: mock_repository.py  pgvector_repository.py  vector_repositories.py  vector_repository.py
ml_service/service/extractors/: youtube_extractor.py
ml_service/src/extractors/: __init__.py  youtube_extractor.py
ml_service/src/models/: __init__.py  requests.py  responses.py  songs.py
ml_service/src/repositories/: __init__.py  mock_repository.py  pgvector_repository.py  vector_repository.py
ml_service/tests/: conftest.py  test_api.py  test_repository.py  test_service.py
(+16 files in other folders)
